// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader component ProgressBar - should be defined and renders correctly (snapshot) 1`] = `
<WithUtils
  customStyles={Object {}}
  message={Object {}}
  progress={0}
  steps={Array []}
>
  <Component
    customStyles={Object {}}
    message={Object {}}
    progress={0}
    steps={Array []}
    utils={
      Object {
        "classNames": [Function],
        "uniqueId": [Function],
      }
    }
  >
    <div
      className="loader"
    >
      <span
        className="loader__status"
      />
      <div
        className="loader__bar"
        style={
          Object {
            "borderRadius": "undefinedpx",
          }
        }
      >
        <div
          className="loader__progress loader__progress--icon"
          style={
            Object {
              "backgroundColor": undefined,
              "borderRadius": "undefinedpx",
              "height": "undefinedpx",
              "width": "0%",
            }
          }
        />
      </div>
    </div>
  </Component>
</WithUtils>
`;

exports[`Loader component Spinner - should be defined and renders correctly (snapshot) 1`] = `
<WithUtils
  animation="linear"
  customStyles={Object {}}
>
  <Component
    animation="linear"
    customStyles={Object {}}
    utils={
      Object {
        "classNames": [Function],
        "uniqueId": [Function],
      }
    }
  >
    <div
      className="loader"
    >
      <div
        className=""
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
      >
        <div
          className="loader__spinner loader__spinner--linear"
          style={
            Object {
              "border": undefined,
              "borderTopColor": undefined,
              "height": "undefinedpx",
              "width": "undefinedpx",
            }
          }
        />
      </div>
    </div>
  </Component>
</WithUtils>
`;

exports[`Loader component should render Cutom ProgressBar with steps 1`] = `
<WithUtils
  customStyles={Object {}}
  message={
    Object {
      "incomplete": "Loading...",
      "position": "left",
      "status": "10%",
    }
  }
  progress={10}
  steps={
    Array [
      Object {
        "color": "#ffc107",
        "final": 99,
        "icon": "priority_high",
        "start": 0,
      },
      Object {
        "color": "#4caf50",
        "final": 100,
        "icon": "done",
        "start": 99,
      },
    ]
  }
>
  <Component
    customStyles={Object {}}
    message={
      Object {
        "incomplete": "Loading...",
        "position": "left",
        "status": "10%",
      }
    }
    progress={10}
    steps={
      Array [
        Object {
          "color": "#ffc107",
          "final": 99,
          "icon": "priority_high",
          "start": 0,
        },
        Object {
          "color": "#4caf50",
          "final": 100,
          "icon": "done",
          "start": 99,
        },
      ]
    }
    utils={
      Object {
        "classNames": [Function],
        "uniqueId": [Function],
      }
    }
  >
    <div
      className="loader"
    >
      <span
        className="loader__status loader__status--left"
      >
        10%
      </span>
      <div
        className="loader__bar"
        style={
          Object {
            "borderRadius": "undefinedpx",
          }
        }
      >
        <div
          className="loader__progress loader__progress--icon"
          style={
            Object {
              "backgroundColor": "#ffc107",
              "borderRadius": "undefinedpx",
              "height": "undefinedpx",
              "width": "10%",
            }
          }
        >
          <div
            className="loader__step--default"
            style={
              Object {
                "backgroundColor": "#ffc107",
                "borderRadius": "undefinedpx",
              }
            }
          >
            <i
              className="material-icons icon"
            >
              priority_high
            </i>
          </div>
        </div>
      </div>
    </div>
  </Component>
</WithUtils>
`;
